Fixes more magazine home spacing

--- a/wp-content/themes/cmp/assets/styles/pages/_carnegie-magazine-section-1.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_carnegie-magazine-section-1.scss
@@ -30,6 +30,9 @@
 
   .main-article-content {
     margin-bottom: $small-spacing;
+    h1 {
+      font-size: 3em;
+    }
   }
 
   .article {
