--- a/wp-content/themes/cmp/assets/styles/pages/_carnegie-magazine-section-2.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_carnegie-magazine-section-2.scss
@@ -10,7 +10,13 @@
   }
 
   h1.hero-header__words-box.robot {
+    margin-top: 0;
+    margin-bottom: $small-spacing;
     line-height: 1.1;
+
+    @include grid-media($medium) {
+      margin-top: $small-spacing / 2;
+    }
   }
 
   .facetime {
@@ -22,31 +28,39 @@
     }
 
     p {
-      padding: 0;
-      margin: 0;
       font-weight: bold;
     }
   }
 
   h2.facetime-title {
     width: 100%;
+    font-family: $base-font-family;
+    text-transform: uppercase;
   }
 
   .facetime__left {
-    padding-right: 0.5em;
+    margin-right: $small-spacing;
 
     .facetime__left__name {
       font-size: 1.5em;
     }
 
     img {
-      max-height: 640px;
+      max-height: 672px;
+
+      @include grid-media($small) {
+        max-height: 575px;
+      }
     }
   }
 
   .facetime__right {
     flex-basis: 30%;
     flex-flow: column;
+
+    @include grid-media($small) {
+      flex-basis: 40%;
+    }
 
     img {
       max-height: 193px;
